assets/css/autoprefixerstyle.css
/* ... */
/*****************======================*screens above 2000px================************/

@media screen and (min-width:2000px) {
    .numbertext {
        left:48%;
    }

    #submit {
        left:-42%;
    }
}


/*==============================landscape==========================*/
/*=====Adjust gallery images and nav buttons for landscape mode====*/

@media screen and (orientation:landscape) and (min-height:320px)  and (max-height:425px) {

    .slideshow-container img {
        max-height: 160px;
        max-width: 500px;
        -o-object-fit: scale-down;
           object-fit: scale-down;
    }

   .slideshow-container {
       max-width: 500px;
       max-height: 160px;
       top:35vh;
   }

   .prev, .next {
       top:55%;
   }

   .mobile-nav a {
    margin-left: 250px;
    position: relative;
    top:-50px;
    }   

   .numbertext {
       top:50%;
       left:20%;
    }

    #grid-wrapper {
        -ms-grid-row: 3;
        -ms-grid-row-span: 10;
        -ms-grid-column: 1;
        -ms-grid-column-span: 12;
        position:relative;
        top:150px;
        left:0;    
        width:100%;
        height:100%;
        display:-ms-grid;
        display:grid;
        -ms-grid-columns: (1fr)[8];
        grid-template-columns: repeat(8, 1fr);
        -ms-grid-rows: (minmax(220px, auto))[12];
        grid-template-rows: repeat(12, minmax(220px, auto));
            grid-template-areas: 
        "text1  text1 text1 text1 text1 text1 text1 text1"
        "image1  image1 image1 image1 image1 image1 image1 image1"
        "image1  image1 image1 image1 image1 image1 image1 image1"
        "text2  text2 text2 text2 text2 text2 text2 text2"
        "image2  image2 image2 image2 image2 image2 image2 image2 "
        "image2  image2 image2 image2 image2 image2 image2 image2 "
        "text3  text3 text3 text3 text3 text3 text3 text3"
        "text4  text4 text4 text4 text4 text4 text4 text4"
        "text5  text5 text5 text5 text5 text5 text5 text5"
        "image3 image3 image3 image3 image3 image3 image3 image3"
        "image3 image3 image3 image3 image3 image3 image3 image3"
        ". . . . . . . . "
        ;
        grid-area: main-texts;
    }

    #bluffers-section {
        height:210vh;
        margin-top:20px;
        border:3px solid var(--snow);
        border-radius:20px;
        background-color: var(--antarcticblue);
    }

    #links-container {
        top:113px;
    }

    #cform {
       min-height:70vh;
    }

    .txt1 {
        -ms-grid-row: 1;
        -ms-grid-column: 1;
        -ms-grid-column-span: 8;
    }

    .txt2 {
        -ms-grid-row: 4;
        -ms-grid-column: 1;
        -ms-grid-column-span: 8;
    }

    .txt3 {
        -ms-grid-row: 7;
        -ms-grid-row-span: 1;
        -ms-grid-column: 1;
        -ms-grid-column-span: 8;
    }

    .txt4 {
        -ms-grid-row: 8;
        -ms-grid-row-span: 1;
        -ms-grid-column: 1;
        -ms-grid-column-span: 8;
    }

    .txt5 {
        -ms-grid-row: 9;
        -ms-grid-row-span: 1;
        -ms-grid-column: 1;
        -ms-grid-column-span: 8;
    }

    .img1 {
        -ms-grid-row: 2;
        -ms-grid-row-span: 2;
        -ms-grid-column: 1;
        -ms-grid-column-span: 8;
    }

    .img2 {
        -ms-grid-row: 5;
        -ms-grid-row-span: 2;
        -ms-grid-column: 1;
        -ms-grid-column-span: 8;
    }

    .img3 {
        -ms-grid-row: 10;
        -ms-grid-row-span: 2;
        -ms-grid-column: 1;
        -ms-grid-column-span: 8;
    }
} 

